<resources>
    <string name="app_name">Register</string>
    <string name="app_info">本软件拟用户注册功能，输入资料后点击．注册"显示信，点击．取消"清空输入</string>
    <string name="app_info_user">请输入用户名</string>
    <string name="app_info_pwd">请输入密码</string>
    <string name="app_info_name">请输入真实姓名</string>
    <string name="app_info_email">请输入email</string>




    <string-array name="langurage">


    </string-array>



    </resources>