<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_info" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">


            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="用户名"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/etUser"
                    android:hint="@string/app_info_user"
                    android:layout_width="200dp"
                    tools:ignore="TouchTargetSizeCheck" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="密码"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/etPass"
                    android:hint="@string/app_info_pwd"
                    android:layout_width="200dp"
                    android:baselineAligned="false" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="姓名"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/etName"
                    android:hint="@string/app_info_name"
                    android:layout_width="match_parent" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Email"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/etEmail"
                    android:hint="@string/app_info_email"
                    android:layout_width="200dp" />
            </TableRow>
        </TableLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="72dp"
                android:layout_height="match_parent"
                android:text="性别"
                android:textSize="24sp" />

            <RadioGroup
                android:id="@+id/rgSex"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:checkedButton="@+id/rdoMale"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@id/rdoMale"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="男"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/rdoFemale"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="女"
                    android:textSize="24sp" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="年龄"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/spRealAge"

                android:layout_width="280dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="爱好"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/chkRead"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="看小说"
                android:textSize="20sp"/>

            <CheckBox
                android:id="@+id/chkPlayGame"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="玩游戏"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/chkEat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="吃饭"
                android:textSize="20sp"/>

            <CheckBox
                android:id="@+id/chkSleep"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="睡觉"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/chfilm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="看电影"
                android:textSize="20sp"/>

            <CheckBox
                android:id="@+id/chmusic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"

                android:text="听音乐"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:onClick="doClick"
                android:text="注册"
                android:textSize="20sp"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:onClick="doClick"
                android:text="取消"
                android:textSize="20sp"
                tools:ignore="OnClick" />
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>